--- a/email/enquiry-email-template.ejs
+++ b/email/enquiry-email-template.ejs
@@ -10,8 +10,7 @@
     <tr>
       <td style="text-align: center;">
         <!-- Embedded logo -->
-        <img src="../image/logo1.png" alt="BrainOneTech Logo" width="150" />
-      </td>
+        <img src="/static/images/logo.png" alt="BrainOneTech Logo" width="150" />      </td>
     </tr>
     <tr>
       <td>
