--- a/email/admin-consulting-email-template.ejs
+++ b/email/admin-consulting-email-template.ejs
@@ -9,7 +9,7 @@
   <table width="100%" cellpadding="0" cellspacing="0" style="font-family: Arial, sans-serif;">
     <tr>
       <td style="text-align: center; padding: 20px;">
-        <img src="https://brain-one-tech.vercel.app/logo.png" alt="BrainOneTech Logo" width="150" />
+        <img src="/static/images/logo.png" alt="BrainOneTech Logo" width="150" />
       </td>
     </tr>
     <tr>
