--- a/email/consulting-slot-booking-email-template.ejs
+++ b/email/consulting-slot-booking-email-template.ejs
@@ -10,7 +10,7 @@
     <tr>
       <td style="text-align: center; padding: 20px;">
         <!-- Embedded logo -->
-        <img src="/static/images/logo.png" alt="BrainOneTech Logo" width="150" />      </td>
+        <img src="https://bts-backend.vercel.app/logo" alt="BrainOneTech Logo" width="150" />      </td>
     </tr>
     <tr>
       <td style="padding: 20px;">
